--- a/pom.xml
+++ b/pom.xml
@@ -28,17 +28,13 @@
             <artifactId>spring-boot-starter-web-services</artifactId>
         </dependency>
 
+<!--This Dependency adds XML serializer and deserializer-->
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>2.11.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
